--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "my first project",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
