--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "lodash": "^4.17.21",
     "mongoose": "^5.12.1",
     "morgan": "^1.10.0",
+    "netlify-lambda": "^2.0.3",
     "nodemon": "^2.0.7",
+    "serverless-http": "^2.7.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon dist/app.js",
+    "test": "node tests/*.js",
+    "build": "npm run test && parcel build dist/app.js"
   },
   "keywords": [
     "npm"
